[metadata]
name = bag8
author = Florent PIGOUT
author-email = florent.pigout@novapost.fr
summary = Cli to orchestrate docker images and containers the easy way.
description-file = README.rst
license = closed
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
keywords =
    bag8
    docker
home-page = https://github.com/novafloss/bag8
zip_safe = False

[global]
zip_safe = False
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    bag8 = bag8.cli:bag8
pytest11 =
    quanti = bag8.tests.plugin

[pbr]
warnerrors = true
